--- a/cheese-rescue-app/package.json
+++ b/cheese-rescue-app/package.json
@@ -8,11 +8,17 @@
     "@testing-library/user-event": "^12.6.0",
     "animate.css": "^4.1.1",
     "node-sass": "^4.14.1",
+    "rdndmb-html5-to-touch": "^7.0.0-alpha.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
+    "react-dnd-multi-backend": "^6.0.2",
+    "react-dnd-touch-backend": "^14.0.0",
     "react-dom": "^17.0.1",
     "react-full-screen": "^1.0.1",
     "react-loader-spinner": "^4.0.0",
+    "react-p5": "^1.3.16",
     "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
