--- a/cheese-rescue-app/package.json
+++ b/cheese-rescue-app/package.json
@@ -20,6 +20,7 @@
     "react-loader-spinner": "^4.0.0",
     "react-p5": "^1.3.16",
     "react-player": "^2.9.0",
+    "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "reactstrap": "^8.8.1",
